--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@ outlined in the Application Developer's Guide.
 <ul>
 <li>To a <a href="hello.jsp">JSP page</a>.
 <li>To a <a href="hello">servlet</a>.
+<li>To a <a href="test">database connection</a>.
 </ul>
 
 </body>
