mod クラスとURLの名称を変更
ルーティングをアノテーションで設定

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,8 +21,8 @@ outlined in the Application Developer's Guide.
 <p>To prove that they work, you can execute either of the following links:
 <ul>
 <li>To a <a href="hello.jsp">JSP page</a>.
-<li>To a <a href="hello">servlet</a>.
-<li>To a <a href="test">database connection</a>.
+<li>To a <a href="test-servlet">servlet</a>.
+<li>To a <a href="test-db-connection">database connection</a>.
 </ul>
 
 </body>
