fix, prepare for frontend

--- a/src/main/webapp/servlet-index.html
+++ b/src/main/webapp/servlet-index.html
@@ -7,7 +7,7 @@
 <table border="0">
 <tr>
 <td>
-<img src="images/tomcat.gif">
+<img src="img/tomcat.gif">
 </td>
 <td>
 <h1>Sample "Hello, World" Application</h1>
