--- a/src/main/webapp/servlet-index.html
+++ b/src/main/webapp/servlet-index.html
@@ -23,6 +23,7 @@ outlined in the Application Developer's Guide.
 <li>To a <a href="hello.jsp">JSP page</a>.
 <li>To a <a href="test-servlet">servlet</a>.
 <li>To a <a href="test-db-connection">database connection</a>.
+<li>To a <a href="test-hibernate">hibernate</a>.
 </ul>
 
 </body>
