--- a/src/main/webapp/servlet-index.html
+++ b/src/main/webapp/servlet-index.html
@@ -24,6 +24,7 @@ outlined in the Application Developer's Guide.
 <li>To a <a href="test-servlet">servlet</a>.
 <li>To a <a href="test-db-connection">database connection</a>.
 <li>To a <a href="test-hibernate">hibernate</a>.
+<li>To a <a href="test-json-response">JSON response</a>.
 </ul>
 
 </body>
